tests/macros/int/choices.rs
fn main() {
    discourse::questions![Int { choices: todo!() }];
}
